Added notelist class with empty array

--- a/runner.html
+++ b/runner.html
@@ -5,7 +5,10 @@
     <title>Our Tests</title>
 
     <script type="text/javascript" src='src/note.js'></script>
+    <script type="text/javascript" src='src/noteList.js'></script>
+
     <script type="text/javascript" src='spec/noteSpec.js'></script>
+    <script type="text/javascript" src='spec/noteListSpec.js'></script>
   </head>
   <body>
     <h1>Tests</h1>
