Add server and controller

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Note List</title>
+    <script type="text/javascript" src='src/note-controller.js'></script>
+    <script type="text/javascript" src='src/note.js'></script>
+    <script type="text/javascript" src='src/noteList.js'></script>
+    <script type="text/javascript" src='src/noteListView.js'></script>
   </head>
   <body>
     <h1>Note List</h1>
+    <div id="app"></div>
+    <!-- <script type="text/javascript">
+      changeName()
+    </script> -->
   </body>
 </html>
