--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <div id='app'>
       hello
     </div>
-    <script type="text/javascript" src='src/note-controller.js'></script>
+    <script src='src/note-controller.js'></script>
   </body>
 </html>
