Added note controller test and tests pass

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <div id='app'>
       hello
     </div>
-    <script src='src/note-controller.js'></script>
+    <script src='src/noteController.js'></script>
   </body>
 </html>
