--- a/runner.html
+++ b/runner.html
@@ -7,11 +7,14 @@
     <script type="text/javascript" src='src/note.js'></script>
     <script type="text/javascript" src='src/noteList.js'></script>
     <script type="text/javascript" src='src/noteListView.js'></script>
+    <script type="text/javascript" src='src/noteController.js'></script>
 
+    <script type="text/javascript" src='spec/assert.js'></script>
 
     <script type="text/javascript" src='spec/noteSpec.js'></script>
     <script type="text/javascript" src='spec/noteListSpec.js'></script>
     <script type="text/javascript" src='spec/noteListViewSpec.js'></script>
+    <script type="text/javascript" src='spec/noteControllerSpec.js'></script>
 
   </head>
   <body>
