--- a/runner.html
+++ b/runner.html
@@ -3,21 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Our Tests</title>
-
     <script type="text/javascript" src='src/note.js'></script>
     <script type="text/javascript" src='src/noteList.js'></script>
     <script type="text/javascript" src='src/noteListView.js'></script>
-    <script type="text/javascript" src='src/noteController.js'></script>
 
     <script type="text/javascript" src='spec/assert.js'></script>
 
     <script type="text/javascript" src='spec/noteSpec.js'></script>
     <script type="text/javascript" src='spec/noteListSpec.js'></script>
     <script type="text/javascript" src='spec/noteListViewSpec.js'></script>
-    <script type="text/javascript" src='spec/noteControllerSpec.js'></script>
 
   </head>
   <body>
     <h1>Tests</h1>
+    <div id='app'>
+      hello
+    </div>
+
+    <script type="text/javascript" src='src/noteController.js'></script>
+    <script type="text/javascript" src='spec/noteControllerSpec.js'></script>
   </body>
 </html>
