Add singleNoteView class

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src='src/note.js'></script>
     <script type="text/javascript" src='src/noteList.js'></script>
     <script type="text/javascript" src='src/noteListView.js'></script>
+    <script type="text/javascript" src='src/singleNoteView.js'></script>
   </head>
   <body>
     <h1>Note List</h1>
