--- a/runner.html
+++ b/runner.html
@@ -6,12 +6,14 @@
     <script type="text/javascript" src='src/note.js'></script>
     <script type="text/javascript" src='src/noteList.js'></script>
     <script type="text/javascript" src='src/noteListView.js'></script>
+    <script type="text/javascript" src='src/singleNoteView.js'></script>
 
     <script type="text/javascript" src='spec/assert.js'></script>
 
     <script type="text/javascript" src='spec/noteSpec.js'></script>
     <script type="text/javascript" src='spec/noteListSpec.js'></script>
     <script type="text/javascript" src='spec/noteListViewSpec.js'></script>
+    <script type="text/javascript" src='spec/singleNoteViewSpec.js'></script>
 
   </head>
   <body>
