--- a/runner.html
+++ b/runner.html
@@ -22,6 +22,10 @@
       hello
     </div>
 
+    <div id='list'>
+      hello
+    </div>
+
     <script type="text/javascript" src='src/noteController.js'></script>
     <script type="text/javascript" src='spec/noteControllerSpec.js'></script>
   </body>
