--- a/runner.html
+++ b/runner.html
@@ -12,8 +12,8 @@
 
     <script type="text/javascript" src='spec/noteSpec.js'></script>
     <script type="text/javascript" src='spec/noteListSpec.js'></script>
-    <script type="text/javascript" src='spec/noteListViewSpec.js'></script>
     <script type="text/javascript" src='spec/singleNoteViewSpec.js'></script>
+    <script type="text/javascript" src='spec/noteListViewSpec.js'></script>
 
   </head>
   <body>
@@ -22,11 +22,31 @@
       hello
     </div>
 
-    <div id='list'>
+    <div id='single-note'>
       hello
     </div>
 
     <script type="text/javascript" src='src/noteController.js'></script>
     <script type="text/javascript" src='spec/noteControllerSpec.js'></script>
+
+
+    <script type="text/javascript">
+      let noteList = new NoteList();
+      let note = new Note();
+      let note2 = new Note();
+      let message = 'Hello world';
+      let message2 = 'Hello world again 1234567891011121314151617181920';
+      let noteListView = new NoteListView(noteList);
+
+      note.createNote(message);
+      note2.createNote(message2);
+      noteList.addNote(note);
+      noteList.addNote(note2);
+
+      let noteController = new NoteController(noteListView);
+      noteController.insertHTML();
+      noteController.showSingleNote();
+    </script>
+
   </body>
 </html>
